# RustyArm64

./: .gitignore  README.md
docs/: graph-overview.md  xml-schema-reference.md
orchestrator/: build_instruction_index.py  build_sysreg_index.py  config.toml  main.py  nodes.py  pyproject.toml  state.py
simulator/: CLAUDE.md  Cargo.toml
simulator/.github/workflows/: ci.yml
simulator/src/: bus.rs  cpu.rs  decode.rs  error.rs  executor.rs  io_device.rs  lib.rs  loader.rs  main.rs  memory.rs  registers.rs
simulator/tests/: integration_test.rs
