[project]
name = "orchestrator"
version = "0.1.0"
description = "LangGraph multi-agent orchestrator for incremental ARM64 Rust simulator development"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.4",
    "langchain-core>=1.4.0",
    "langchain-deepseek>=1.1.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-sqlite>=3.1.0",
]
